Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>Brandon Dove - PixelJar.net (<a href="https://github.com/brandondove" class="user-mention">@brandondove</a>)
-Steve Zehngut - Zeek.com (<a href="https://github.com/stevezehngut" class="user-mention">@stevezehngut</a>)
-Jason Tucker - Tucker.Pro WPMedia.Pro (<a href="https://github.com/jasontucker" class="user-mention">@jasontucker</a>)</p>
+<ul>
+<li>Brandon Dove - PixelJar.net (<a href="https://github.com/brandondove" class="user-mention">@brandondove</a>)</li>
+<li>Steve Zehngut - Zeek.com (<a href="https://github.com/stevezehngut" class="user-mention">@stevezehngut</a>)</li>
+<li>Jason Tucker - Tucker.Pro WPMedia.Pro (<a href="https://github.com/jasontucker" class="user-mention">@jasontucker</a>)</li>
+</ul>
       </section>
     </div>
 
